# object_manipulation

./: .gitignore  README.md  stack.xml
household_objects_database/: CMakeLists.txt  manifest.xml
household_objects_database/include/household_objects_database/: database_capture_region.h  database_file_path.h  database_object_paths.h  database_original_model.h  database_task.h  objects_database.h
household_objects_database/nodes/: objects_database_node.cpp
household_objects_database/src/: objects_database.cpp
household_objects_database_msgs/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
household_objects_database_msgs/srv/: GetModelMesh.srv
interactive_marker_helpers/: CMakeLists.txt  mainpage.dox
interactive_marker_helpers/src/: interactive_marker_helpers.cpp
object_manipulation_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
object_manipulation_msgs/action/: GraspHandPostureExecution.action  Pickup.action  Place.action  ReactiveGrasp.action  ReactiveLift.action
object_manipulation_msgs/include/object_manipulation_msgs/: tools.h
object_manipulator/: CMakeLists.txt  manifest.xml
object_manipulator/include/object_manipulator/: object_manipulator.h
object_manipulator/include/object_manipulator/grasp_execution/: approach_lift_grasp.h  grasp_tester_fast.h
object_manipulator/include/object_manipulator/place_execution/: descend_retreat_place.h  place_tester_fast.h
object_manipulator/include/object_manipulator/tools/: ik_tester_fast.h  mechanism_interface.h
object_manipulator/src/: object_manipulator.cpp
object_manipulator/src/grasp_execution/: approach_lift_grasp.cpp  grasp_tester_fast.cpp
object_manipulator/src/place_execution/: descend_retreat_place.cpp  place_tester_fast.cpp
object_manipulator/src/tools/: mechanism_interface.cpp
point_cloud_server/: .gitignore  CMakeLists.txt  mainpage.dox
point_cloud_server/action/: StoreCloud.action
point_cloud_server/launch/: cloud_server.launch
point_cloud_server/src/: cloud_handler.cpp  cloud_handler.h  cloud_server.cpp  marker_helpers.cpp  marker_helpers.h
rviz_interaction_tools/: CMakeLists.txt  mainpage.dox  manifest.xml
rviz_interaction_tools/include/rviz_interaction_tools/: camera_tools.h  cartesian_control.h  disparity_renderer.h  gripper.h  image_overlay.h  image_tools.h  line.h  mesh_object.h  mesh_object_switcher.h  point_cloud.h  unique_string_manager.h
rviz_interaction_tools/src/: camera_tools.cpp  cartesian_control.cpp  disparity_renderer.cpp  gripper.cpp  image_overlay.cpp  line.cpp  mesh_object.cpp  mesh_object_switcher.cpp  point_cloud.cpp
