<package>
  <name>household_objects_database_msgs</name>
  <version>0.7.0</version>
  <description>ROS message wrappers for some of the data retrieval functions of
    the household_objects_database.</description>
  <maintainer email="matei@willowgarage.com">Matei Ciocarlie</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/household_objects_database_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Matei Ciocarlie</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
